--- a/package.json
+++ b/package.json
@@ -11,16 +11,32 @@
   ],
   "scripts": {
     "start": "stencil build --dev --watch --serve",
-    "build": "stencil build"
+    "build": "stencil build",
+    "storybook": "start-storybook -p 9001 -c .storybook -s www",
+    "build:storybook": "build-storybook -c .storybook -s www -o .storybook-build",
+    "deploy": "npm run build:storybook && surge .storybook-build components.silverstone.io"
   },
   "author": "Silverstone",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "@stencil/core": "^0.13.2",
-    "@stencil/sass": "^0.1.1"
+    "@stencil/sass": "^0.1.1",
+    "@storybook/addon-actions": "^4.0.0-alpha.24",
+    "@storybook/addons": "^4.0.0-alpha.24",
+    "@storybook/html": "^4.0.0-alpha.24",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "moment": "^2.22.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "velocity-react": "^1.4.1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/silverstone/components.git"
+  },
+  "dependencies": {
+    "@storybook/addon-knobs": "^4.0.0-alpha.24"
   }
 }
