--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.1.2",
     "@stencil/core": "^0.13.2",
     "@stencil/sass": "^0.1.1",
+    "@storybook/addon-a11y": "^4.0.0-alpha.24",
     "@storybook/addon-actions": "^4.0.0-alpha.24",
     "@storybook/addons": "^4.0.0-alpha.24",
     "@storybook/html": "^4.0.0-alpha.24",
