--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@stencil/sass": "^0.1.1",
     "@storybook/addon-a11y": "^4.0.0-alpha.24",
     "@storybook/addon-actions": "^4.0.0-alpha.24",
+    "@storybook/addon-knobs": "^4.0.0-alpha.24",
     "@storybook/addons": "^4.0.0-alpha.24",
-    "@storybook/html": "^4.0.0-alpha.24",
+    "@storybook/react": "^4.0.0-alpha.24",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "moment": "^2.22.2",
@@ -36,8 +37,5 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/silverstone/components.git"
-  },
-  "dependencies": {
-    "@storybook/addon-knobs": "^4.0.0-alpha.24"
   }
 }
