--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/silverstone/components.git"
+  },
+  "dependencies": {
+    "stencil-fragment": "^1.0.1"
   }
 }
