--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@babel/core": "^7.1.2",
     "@stencil/core": "^0.13.2",
     "@stencil/sass": "^0.1.1",
-    "@storybook/addon-a11y": "^4.0.0-alpha.24",
-    "@storybook/addon-actions": "^4.0.0-alpha.24",
-    "@storybook/addon-knobs": "^4.0.0-alpha.24",
-    "@storybook/addons": "^4.0.0-alpha.24",
-    "@storybook/react": "^4.0.0-alpha.24",
+    "@storybook/addon-a11y": "^4.0.0-rc.0",
+    "@storybook/addon-actions": "^4.0.0-rc.0",
+    "@storybook/addon-knobs": "^4.0.0-rc.0",
+    "@storybook/addons": "^4.0.0-rc.0",
+    "@storybook/react": "^4.0.0-rc.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
     "moment": "^2.22.2",
