--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "dependencies": {
     "rollup-plugin-alias": "^1.4.0",
-    "stencil-fragment": "^1.0.1"
+    "stencil-fragment": "^1.0.1",
+    "stencil-styled-components": "^1.3.1",
+    "stylis": "^3.5.3"
   }
 }
