--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "stencil build",
     "storybook": "start-storybook -p 9001 -c .storybook -s www",
     "build:storybook": "build-storybook -c .storybook -s www -o .storybook-build",
-    "deploy": "npm run build:storybook && surge .storybook-build components.silverstone.io"
+    "deploy": "npm run build:storybook && surge .storybook-build components.silverstone.io",
+    "test": "stencil test --spec --e2e"
   },
   "author": "Silverstone",
   "license": "MIT",
@@ -27,9 +28,14 @@
     "@storybook/addon-knobs": "^4.0.0-rc.0",
     "@storybook/addons": "^4.0.0-rc.0",
     "@storybook/react": "^4.0.0-rc.0",
+    "@types/puppeteer": "1.6.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.4",
+    "jest": "23.5.0",
+    "jest-environment-node": "23.4.0",
     "moment": "^2.22.2",
+    "pixelmatch": "4.0.2",
+    "puppeteer": "1.7.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "velocity-react": "^1.4.1"
@@ -39,6 +45,7 @@
     "url": "git+https://github.com/silverstone/components.git"
   },
   "dependencies": {
+    "@types/jest": "^23.3.5",
     "rollup-plugin-alias": "^1.4.0",
     "stencil-fragment": "^1.0.1",
     "stencil-styled-components": "^1.3.1",
